Mid Project Report

--- a/Project/Bibliography.bib
+++ b/Project/Bibliography.bib
@@ -85,14 +85,32 @@ author = {NHS},
 title = {Choose and Book},
 month = {Febuary},
 year = {2014},
-url = {http://www.chooseandbook.nhs.uk/patients/whatiscab}}
+url = {http://www.chooseandbook.nhs.uk/patients/whatiscab}
+}
+
+@ONLINE{timKelsey,
+author = {Tim Kelsey},
+title = {Personalised care plans will give patients control of their own health},
+month = {September},
+year = {2013},
+url = {http://www.england.nhs.uk/2013/09/25/tim-kelsey-2/}
+}
 
 @ONLINE{C&BFailure,
 author = {NHS},
 title = {Choose and Book use drops further},
 month = {Febuary},
 year = {2014},
-url = {http://www.ehi.co.uk/news/ehi/7835/choose-and-book-use-drops-further}}
+url = {http://www.ehi.co.uk/news/ehi/7835/choose-and-book-use-drops-further}
+}
+
+@ONLINE{HSCA2012,
+author = {GOV},
+title = {Health and Social Care Act},
+month = {January},
+year = {2012},
+url = {http://www.legislation.gov.uk/ukpga/2012/7/enacted}
+}
 
 @article{Green,
   title={Does Choose \& Book fail to deliver the expected choice to patients? A survey of patients' experience of outpatient appointment booking},
