Finishing design chapter, started work on implementation chapter.

--- a/Project/Bibliography.bib
+++ b/Project/Bibliography.bib
@@ -133,3 +133,27 @@ url = {http://www.legislation.gov.uk/ukpga/2012/7/enacted}
   year={2006},
   publisher={Royal College of Physicians}
 }
+
+@ONLINE{rest,
+author = {Pietrino Atzeni},
+title = {Rest Diagram},
+month = {July},
+year = {2011},
+url = {http://di-side.com/di-side/services/web-solutions/rest-webservice-symfony/}
+}
+
+@ONLINE{gcm,
+author = {},
+title = {GCM Diagram},
+month = {October},
+year = {2012},
+url = {http://1.bp.blogspot.com/-5uC3HOZQnvs/UIPzoWZduiI/AAAAAAAACNM/qFuiBA7fpi0/s1600/gcm-image.png}
+}
+
+@ONLINE{wikiMVC,
+author = {Regis Frey},
+title = {MVC Diagram},
+month = {May},
+year = {2010},
+url = {http://en.wikipedia.org/wiki/File:MVC-Process.svg}
+}
