Fixes to code, updates to project report.

--- a/Project/Appendices/EthicalIssues.tex
+++ b/Project/Appendices/EthicalIssues.tex
@@ -2,9 +2,9 @@
 
 \chapter{How ethical issues are addressed} % Main appendix title
 
-\label{AppendixA} % Change X to a consecutive letter; for referencing this appendix elsewhere, use \ref{AppendixX}
+\label{AppendixC} % Change X to a consecutive letter; for referencing this appendix elsewhere, use \ref{AppendixX}
 
-\lhead{Appendix A. \emph{How ethical issues are addressed}} % Change X to a consecutive letter; this is for the header on each page - perhaps a shortened title
+\lhead{Appendix C. \emph{How ethical issues are addressed}} % Change X to a consecutive letter; this is for the header on each page - perhaps a shortened title
 
 \section{Introduction}
 
